syntax = "proto3";
package data;

message Msg {}

message Conf {
    Headers headers = 1;
}

message Headers {
    string user_agent = 1;
    string referer = 2;
    map<string, string> cookies = 3;
}

message App {}

message TestResSet {
    int32 id = 1;
    string name = 2;
    repeated TestRes set = 3;
}

message TestRes {
    int32 id = 1;
    string name = 2;
    int32 status = 3;
}
