syntax = "proto3";
package bili;

message Bili {
    map<string, string> cookies = 1;
}

message Res {
    string id = 1;
    string title = 2;
    int32 status = 3;
    repeated Upper uppers = 15;
}

message Upper {
    string id = 1;
    string title = 2;
}

message ResSet {
    int64 id = 1;
    string title = 2;
    int32 status = 3;
    repeated Upper uppers = 14;
    repeated Res set = 15;
}

message ResSets {
    repeated ResSet list = 15;
}
